# fastapi-postgres

./: Dockerfile  alembic.ini  database.py  docker-compose.yml  main.py  models.py  pyproject.toml
core/: config.py
db/: database.py
migrations/: env.py
migrations/versions/: 5f99cd97d39e_add_age_to_user_table.py
models/: __init__.py  purchase.py  user.py
routers/: purchase.py  user.py
schemas/: purchase.py  user.py
