[project]
name = "fastapi-postgres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.1",
    "fastapi[standard]>=0.119.1",
    "ipython>=9.6.0",
    "mimesis>=18.0.0",
    "pandas>=2.3.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "sqlmodel>=0.0.27",
]
